new titles for tables

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +127,16 @@
     "    \n",
     "    def show_results(self):\n",
     "        table = [ \n",
-    "            [\"Shortest Tour Distance\", self.opt_dist]\n",
+    "            [\"Shortest Found Tour Distance\", self.opt_dist]\n",
     "        ]\n",
     "        \n",
     "        if self.optimal_tour is not None:\n",
     "            self.optimal_distance = self.tot_distance(self.optimal_tour)\n",
-    "            table.append([\"Optimal Tour Distance\", self.optimal_distance])\n",
+    "            table.append([\"True Optimal Tour Distance\", self.optimal_distance])\n",
     "            table.append([\"Difference\", self.opt_dist - self.optimal_distance])\n",
     "        \n",
     "        table.append([None,None])\n",
-    "        table.append([\"Shortest Tour\",self.opt_tour])\n",
+    "        table.append([\"Shortest Found Tour\",self.opt_tour])\n",
     "        \n",
     "        return tabulate(table, headers=[\"Metric\",\"Values\"], tablefmt=\"html\")   "
    ]
