lil bit of mkdwn

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing and Setting up file Paths"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,6 +35,13 @@
     "a280_opt = \"problem_data/big/a280.opt.tour.txt\"\n",
     "pcb442 = \"problem_data/big/pcb442.tsp.txt\"\n",
     "pcb442_opt = \"problem_data/big/pcb442.opt.tour.txt\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class for the Travelling Salesman Problem"
    ]
   },
   {
@@ -142,6 +156,13 @@
     "        table.append([\"Shortest Found Tour\",self.opt_tour])\n",
     "        \n",
     "        return tabulate(table, headers=[\"Metric\",\"Values\"], tablefmt=\"html\")   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results for our different cases"
    ]
   },
   {
@@ -270,6 +291,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observing Convergence Rate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
@@ -311,6 +339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experimenting with Different **Cooling Rates**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
@@ -349,6 +384,13 @@
     "plt.legend()\n",
     "plt.grid(True, linestyle='--', linewidth=0.5)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experimenting with Different **Markov Chain Lengths**"
    ]
   },
   {
