--- a/notebook francesco.ipynb
+++ b/notebook francesco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''We define here the functions that will be used throughout the code'''\n",
+    "\n",
     "def read_tsp(name): # Read the tsp file and create a list of the nodes coordinates\n",
     "\n",
     "    lines = open(name, 'r').readlines() # Open the file and devide it in lines\n",
@@ -54,13 +56,13 @@
     "        if abs(i - j) > 1: # Ensure edges are non-adjacent\n",
     "            break\n",
     "    \n",
-    "    if i != (n - 1) and j != (n - 1):\n",
+    "    if i != (n - 1) and j != (n - 1): # Case where the i^th and j^th components are not the last in the list\n",
     "        new_tour = tour[:i+1] + [tour[j+1]] + [tour[i+1]] + tour[i+2:j+1] + tour[j+2:]\n",
     "        return new_tour\n",
-    "    elif i == (n - 1):\n",
+    "    elif i == (n - 1): # Case where the i^th component is the last of the list\n",
     "        new_tour = [tour[i]] + [tour[j+1]] + tour[:j+1] + tour[j+2:i]\n",
     "        return new_tour\n",
-    "    elif j == (n - 1):\n",
+    "    elif j == (n - 1): # Case wehre the j^th component is the last of the list\n",
     "        new_tour = [tour[j]] + [tour[i+1]] + tour[:i+1] + tour[i+2:j]\n",
     "        return new_tour\n",
     "\n",
@@ -83,7 +85,7 @@
     "    for iteration in range(max_iterations): # Loop through a maximum number of iterations\n",
     "        for _ in range(mc_length): # Loop through a markov chain before updating the temperature\n",
     "\n",
-    "            new_tour = two_opt(present_tour)\n",
+    "            new_tour = two_opt(present_tour) # Perform a two opt swap in the present tour\n",
     "            new_dist = tot_distance(new_tour, dist_matrix) # Calculate the total distance of this new tour\n",
     "\n",
     "            # If the new distance is lower that the best-so-far one or a random number is lower than the temperature-based parameter computed below (set to be maximum = 1), focus on the new tour found\n",
@@ -113,7 +115,7 @@
     "\n",
     "    return np.array(nodes) # Return the true optimal tour\n",
     "\n",
-    "def confidence_interval(data, confidence = 0.95):\n",
+    "def confidence_interval(data, confidence = 0.95): # Calculate the 95% CI for some given data\n",
     "    n = len(data)\n",
     "    mean = np.mean(data, axis = 0)\n",
     "    se = sem(data, axis = 0)\n",
@@ -137,6 +139,8 @@
     }
    ],
    "source": [
+    "'''We perform simulated annealing on the 51-cities problem'''\n",
+    "\n",
     "# Read the file, calculate the data of the problem (nodes coordinates and distance matrix)\n",
     "name = \"eil51.tsp.txt\"\n",
     "nodes = read_tsp(name)\n",
@@ -176,6 +180,8 @@
     }
    ],
    "source": [
+    "'''We perform simulated annealing on the 280-cities problem'''\n",
+    "\n",
     "# Read the file, calculate the data of the problem (nodes coordinates and distance matrix)\n",
     "name = \"a280.tsp.txt\"\n",
     "nodes = read_tsp(name)\n",
@@ -215,6 +221,8 @@
     }
    ],
    "source": [
+    "'''We perform simulated annealing on the 442-cities problem'''\n",
+    "\n",
     "# Read the file, calculate the data of the problem (nodes coordinates and distance matrix)\n",
     "name = \"pcb442.tsp.txt\"\n",
     "nodes = read_tsp(name)\n",
@@ -255,10 +263,13 @@
     }
    ],
    "source": [
+    "'''We plot the average convergence for our simulated annealing algorithm applied to every problem'''\n",
+    "\n",
     "# Read the file, calculate the data of the problem (nodes coordinates and distance matrix)\n",
     "names = [\"eil51.tsp.txt\", \"a280.tsp.txt\", \"pcb442.tsp.txt\"]\n",
     "opt_names = [\"eil51.opt.tour.txt\", \"a280.opt.tour.txt\", \"pcb442.opt.tour.txt\"]\n",
     "labels = [51, 280, 442]\n",
+    "\n",
     "# Set the parameters\n",
     "T0 = 1000\n",
     "cooling_rate = 0.998\n",
@@ -267,20 +278,26 @@
     "\n",
     "plt.figure(dpi = 300)\n",
     "\n",
+    "#Loop through the 3 different problems\n",
     "for it, name in enumerate(names):\n",
     "    all_results = []\n",
+    "\n",
+    "    # Compute problem data (nodes names and distance matrix)\n",
     "    nodes = read_tsp(name)\n",
     "    dist_matrix = distance_matrix(nodes)\n",
     "\n",
-    "    true_opt = tot_distance(tour = read_tsp_opt(opt_names[it]), dist_matrix = dist_matrix)\n",
+    "    true_opt = tot_distance(tour = read_tsp_opt(opt_names[it]), dist_matrix = dist_matrix) # Computes the length of the given solution\n",
     "\n",
+    "    # Run the algorithm 30 times\n",
     "    for _ in range(30):\n",
     "        _, _, dic_result = simulated_annealing(dist_matrix, T0, cooling_rate, mc_length, max_iterations)\n",
     "        all_results.append((np.array(list(dic_result.values())) - true_opt)/true_opt)\n",
     "\n",
+    "    #Calculate the mean and confidence interval for the distance from the true optimum at every iteration of the slgorithm over the 30 runs\n",
     "    all_results = np.array(all_results)\n",
     "    mean, ci = confidence_interval(all_results)\n",
-    "        \n",
+    "    \n",
+    "    # Plot the results\n",
     "    plt.plot(list(dic_result.keys()), mean, label = str(labels[it]))\n",
     "    plt.fill_between(list(dic_result.keys()), mean - ci, mean + ci, alpha = 0.2)\n",
     "\n",
@@ -308,6 +325,8 @@
     }
    ],
    "source": [
+    "'''We now focus on the 280-cities problem and observe how the convergence changes as we increase the MC length'''\n",
+    "\n",
     "# Read the file, calculate the data of the problem (nodes coordinates and distance matrix)\n",
     "name = \"a280.tsp.txt\"\n",
     "nodes = read_tsp(name)\n",
@@ -318,18 +337,24 @@
     "cooling_rate = 0.998\n",
     "max_iterations = 7000\n",
     "\n",
-    "true_opt = tot_distance(tour = read_tsp_opt(\"a280.opt.tour.txt\"), dist_matrix = dist_matrix)\n",
+    "true_opt = tot_distance(tour = read_tsp_opt(\"a280.opt.tour.txt\"), dist_matrix = dist_matrix) # Compute length of true solution\n",
     "\n",
     "plt.figure(dpi = 300)\n",
+    "\n",
+    "# Loop through different MC lengths \n",
     "for mc in [3, 10, 50, 150, 500]:\n",
     "    all_results = []\n",
+    "    \n",
+    "    # For every MC length, run the algorithm 30 times\n",
     "    for it in range(30):\n",
     "        _, _, dic_result = simulated_annealing(dist_matrix, T0, cooling_rate, mc_length = mc, max_iterations = max_iterations)\n",
     "        all_results.append(np.array(list(dic_result.values())) - true_opt)\n",
     "    \n",
+    "    # Compute the mean and CI over the 30 runs for every iteration\n",
     "    all_results = np.array(all_results)\n",
     "    mean, ci = confidence_interval(all_results)\n",
-    "        \n",
+    "    \n",
+    "    # Plot the results\n",
     "    plt.plot(list(dic_result.keys()), mean, label = str(mc))\n",
     "    plt.fill_between(list(dic_result.keys()), mean - ci, mean + ci, alpha = 0.2)\n",
     "\n",
@@ -357,6 +382,8 @@
     }
    ],
    "source": [
+    "'''We now observe the effect on convergence of a change in the cooling schedule'''\n",
+    "\n",
     "# Read the file, calculate the data of the problem (nodes coordinates and distance matrix)\n",
     "name = \"a280.tsp.txt\"\n",
     "nodes = read_tsp(name)\n",
@@ -367,18 +394,24 @@
     "mc = 100\n",
     "max_iterations = 7000\n",
     "\n",
-    "true_opt = tot_distance(tour = read_tsp_opt(\"a280.opt.tour.txt\"), dist_matrix = dist_matrix)\n",
+    "true_opt = tot_distance(tour = read_tsp_opt(\"a280.opt.tour.txt\"), dist_matrix = dist_matrix) # Compute length of true solution\n",
     "\n",
     "plt.figure(dpi = 300)\n",
+    "\n",
+    "# Loop through different cooling rates\n",
     "for cr in [0.5, 0.95, 0.99, 0.995, 0.9975, 0.998, 0.999]:\n",
     "    all_results = []\n",
+    "    \n",
+    "    # For every cooling rate, run the algorithm 30 times\n",
     "    for it in range(30):\n",
     "        _, _, dic_result = simulated_annealing(dist_matrix, T0, cooling_rate = cr, mc_length = mc, max_iterations = max_iterations)\n",
     "        all_results.append(np.array(list(dic_result.values())) - true_opt)\n",
     "    \n",
+    "    # Compute the mean and CI over the 30 runs for every iteration\n",
     "    all_results = np.array(all_results)\n",
     "    mean, ci = confidence_interval(all_results)\n",
-    "        \n",
+    "    \n",
+    "    # Plot the results \n",
     "    plt.plot(list(dic_result.keys()), mean, label = str(cr))\n",
     "    plt.fill_between(list(dic_result.keys()), mean - ci, mean + ci, alpha = 0.2)\n",
     "\n",
@@ -391,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +439,10 @@
     }
    ],
    "source": [
-    "def temperature_analysis(T0, cooling_rate, max_iterations): # Perform optimization of the total distance through simulated annealing\n",
+    "'''Here we observe the reason for which some of the lines in the graph above are interrupted before reaching the limit of 7000 iterations\n",
+    "This is due to the temperature reaching the cutoff limit of 1e-12 earlier, becasue of the faster schooling schedule (as it can be seen from the graph below).'''\n",
+    "\n",
+    "def temperature_analysis(T0, cooling_rate, max_iterations): # Simulate the behaviour of the temperature in the simulated annealing algorithm\n",
     "    \n",
     "    dic_result = {}\n",
     "\n",
@@ -427,17 +463,14 @@
     "max_iterations = 7000\n",
     "\n",
     "plt.figure(dpi = 300)\n",
+    "# Loop through different cooling rates\n",
     "for cr in [0.5, 0.95, 0.99, 0.995, 0.9975, 0.998, 0.999]:\n",
-    "    all_results = []\n",
-    "    for it in range(30):\n",
-    "        dic_result = temperature_analysis(T0, cooling_rate = cr, max_iterations = max_iterations)\n",
-    "        all_results.append(np.array(list(dic_result.values())))\n",
-    "    \n",
-    "    all_results = np.array(all_results)\n",
-    "    mean, ci = confidence_interval(all_results)\n",
-    "        \n",
-    "    plt.plot(list(dic_result.keys()), mean, label = str(cr))\n",
-    "    plt.fill_between(list(dic_result.keys()), mean - ci, mean + ci, alpha = 0.2)\n",
+    "\n",
+    "    # Run the temperature drop simulation\n",
+    "    dic_result = temperature_analysis(T0, cooling_rate = cr, max_iterations = max_iterations)\n",
+    "\n",
+    "    # Plot the results\n",
+    "    plt.plot(list(dic_result.keys()), list(dic_result.values()), label = str(cr))\n",
     "\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('Temperature (log)')\n",
@@ -445,6 +478,13 @@
     "plt.legend(title = \"Cooling rate:\", title_fontproperties = {\"weight\": \"heavy\"})\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
